// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Equities component should match snapshot with accounts 1`] = `
<ErrorBoundary>
  <div
    data-test="Position_Equities"
  >
    <Hide
      above="md"
      below={null}
    >
      <Mobile
        equities={
          Array [
            Object {
              "date": "12/12",
              "grossBalance": 123,
              "name": "name",
              "portfolioShare": 123,
            },
          ]
        }
        isEmpty={false}
        loading={false}
      />
    </Hide>
    <Hide
      above={null}
      below="md"
    >
      <Desktop
        equities={
          Array [
            Object {
              "date": "12/12",
              "grossBalance": 123,
              "name": "name",
              "portfolioShare": 123,
            },
          ]
        }
        isEmpty={false}
        loading={false}
      />
    </Hide>
  </div>
</ErrorBoundary>
`;

exports[`Equities component should match snapshot with loading 1`] = `
<ErrorBoundary>
  <div
    data-test="Position_Equities"
  >
    <Hide
      above="md"
      below={null}
    >
      <Mobile
        equities={Array []}
        isEmpty={false}
        loading={true}
      />
    </Hide>
    <Hide
      above={null}
      below="md"
    >
      <Desktop
        equities={Array []}
        isEmpty={false}
        loading={true}
      />
    </Hide>
  </div>
</ErrorBoundary>
`;

exports[`Equities component should match snapshot without accounts 1`] = `
<ErrorBoundary>
  <div
    data-test="Position_Equities"
  >
    <Hide
      above="md"
      below={null}
    >
      <Mobile
        equities={Array []}
        isEmpty={false}
        loading={false}
      />
    </Hide>
    <Hide
      above={null}
      below="md"
    >
      <Desktop
        equities={Array []}
        isEmpty={false}
        loading={false}
      />
    </Hide>
  </div>
</ErrorBoundary>
`;
